# image-handler-client

./: Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
image_handler_client/schemas/: image_info.py
tests/unit/: test_image_schema.py
