[tool.poetry]
name = "image-handler-client"
version = "1.0.2"
description = "Contains schemas with information about images"
authors = [
  "Nathan <probysuper8@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/imaginate-ai/image-handler-client"

[tool.poetry.dependencies]
python = "^3.12"
marshmallow = "^3.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
ruff = "^0.5.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.ruff]
exclude = []
line-length = 88
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["image_handler_client"]
testpaths = ["tests/unit"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
